--- a/src/components/Dashboard/dashboard.css
+++ b/src/components/Dashboard/dashboard.css
@@ -1,3 +1,9 @@
-h1{
-    color:white;
-}
+#overall{
+    position: absolute;
+    left: 0; right: 0; bottom: 0;
+    background: black;
+    padding: 3px 8px;
+    color: #fff;
+    z-index: 1;
+    border:1px solid lightskyblue;
+  }
