--- a/src/components/Dashboard/dashboard.css
+++ b/src/components/Dashboard/dashboard.css
@@ -7,3 +7,12 @@
     z-index: 1;
     border:1px solid lightskyblue;
   }
+  #NavBar{
+    position: absolute;
+    left: 10; right: 20; top: 0;
+    background: black;
+    padding: 3px 8px;
+    color: #fff;
+    z-index: 1;
+    border:1px solid lightskyblue;
+  }
