--- a/client/src/containers/Dashboard/dashboard.css
+++ b/client/src/containers/Dashboard/dashboard.css
@@ -1,7 +1,7 @@
 #overall{
     position: absolute;
     left: 0; right: 0; bottom: 0;
-    background: black;
+    background: white;
     padding: 3px 8px;
     color: #fff;
     z-index: 1;
