--- a/client/src/containers/Dashboard/dashboard.css
+++ b/client/src/containers/Dashboard/dashboard.css
@@ -1,3 +1,5 @@
+/*
+   FOR THE OVERALL STATS GRAPH TO BE DISPLAYED AT THE END OF THE PAGE.
 #overall{
     position: absolute;
     left: 0; right: 0; bottom: 0;
@@ -7,12 +9,20 @@
     z-index: 1;
     border:1px solid lightskyblue;
   }
-  #NavBar{
-    position: absolute;
-    left: 10; right: 20; top: 0;
-    background: black;
-    padding: 3px 8px;
-    color: #fff;
-    z-index: 1;
-    border:1px solid lightskyblue;
+
+  */
+  
+  .bodyDashboard{
+
+    padding-top:100px;
+    padding-left: 20px;
+    padding-right:20px;
+    text-align: justify;
+
+  }
+  .dropdown{
+    
+    padding-top:150px;
+    padding-left:70%;
+    
   }
