--- a/client/src/containers/Header/Try.css
+++ b/client/src/containers/Header/Try.css
@@ -1,9 +1,9 @@
 .header_body{
-    
     border:2px solid black;
-    
     background-color: black;
     padding:5px;
     text-align: left;
     font-size:20px;
+    position: fixed;
+    width: 100%;
 }
