--- a/client/src/containers/Dashboard/dashboard.css
+++ b/client/src/containers/Dashboard/dashboard.css
@@ -17,12 +17,13 @@
     padding-top:100px;
     padding-left: 20px;
     padding-right:20px;
+    padding-bottom:100px;
     text-align: justify;
 
   }
   .dropdown{
     
-    padding-top:150px;
+    padding-top:170px;
     padding-left:70%;
     
   }
