--- a/client/src/containers/Header/Try.css
+++ b/client/src/containers/Header/Try.css
@@ -7,3 +7,18 @@
     position: fixed;
     width: 100%;
 }
+.buttonsHeader{
+    padding-left:80%;
+}
+.Settings{
+    padding:10px;
+    background-color: lightskyblue;
+    font-weight: bold;
+    border-radius: 5px;
+}
+.Logout                                                                                                                                                                                             {
+    padding:10px;
+    background-color: lightskyblue;
+    font-weight: bold;
+    border-radius: 5px;
+}
