--- a/client/src/containers/Header/Try.css
+++ b/client/src/containers/Header/Try.css
@@ -1,4 +1,4 @@
-.header_body{
+/* .header_body{
     border:2px solid black;
     background-color: black;
     padding:5px;
@@ -21,4 +21,4 @@
     background-color: lightskyblue;
     font-weight: bold;
     border-radius: 5px;
-}
+} */
