importing modal bootstrap css and reformatting the footer

--- a/client/src/containers/Footer/Footer.css
+++ b/client/src/containers/Footer/Footer.css
@@ -1,12 +1,10 @@
 .footer_body{
-    
+    position:fixed;
+    left:0; right:0; bottom:0;
+    border: 1px solid lightskyblue;
     background-color: black;
-    color:lightskyblue;
+    color: lightskyblue;
     text-align: center;
-    margin-bottom:0px;
-   
-    font-size:5px;
-    position: fixed;
-    left: 0; right: 0; bottom: 0;
-    width: 100%;
+    font-weight: bold;
+
 }
